--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-alice-carousel": "^2.8.0",
     "react-bootstrap": "^2.9.0",
     "react-carousel": "^4.3.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-grid-carousel": "^1.0.1",
     "react-icons": "^4.11.0",
@@ -42,6 +43,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
+    "react-star-rating-component": "^1.4.1",
     "react-styled-carousel": "^0.5.1",
     "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
