--- a/package.json
+++ b/package.json
@@ -11,46 +11,47 @@
   },
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
-    "@cloudinary/url-gen": "^1.12.0",
+    "@cloudinary/url-gen": "^1.14.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/icons-material": "^5.14.13",
-    "@mui/material": "^5.14.13",
-    "@react-oauth/google": "^0.11.1",
-    "axios": "^1.5.1",
+    "@mui/icons-material": "^5.15.1",
+    "@mui/material": "^5.15.1",
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
-    "cloudinary": "^1.41.0",
+    "cloudinary": "^1.41.1",
     "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "framer-motion": "^10.16.4",
-    "mongoose": "^8.0.0",
+    "framer-motion": "^10.16.16",
+    "mongoose": "^8.0.3",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
-    "react-bootstrap": "^2.9.0",
+    "react-bootstrap": "^2.9.1",
     "react-carousel": "^4.3.0",
-    "react-datepicker": "^4.24.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-grid-carousel": "^1.0.1",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-image-gallery": "^1.3.0",
     "react-loading-icons": "^1.1.0",
     "react-modal-login": "^2.0.7",
     "react-multi-carousel": "^2.8.4",
-    "react-router-dom": "^6.16.0",
+    "react-rating-stars-component": "^2.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.21.0",
     "react-slick": "^0.29.0",
-    "react-star-rating-component": "^1.4.1",
-    "react-styled-carousel": "^0.5.1",
+    "react-styled-carousel": "^0.5.0",
     "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
-    "swiper": "^10.3.1"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "@types/react": "^16.14.51",
+    "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.7",
     "@types/react-slider": "^1.3.5",
     "@vitejs/plugin-react": "^4.0.3",
@@ -59,5 +60,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
+  },
+  "resolutions": {
+    "react": "18.2.0"
   }
 }
