--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cloudinary": "^1.41.1",
     "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "framer-motion": "^10.16.16",
     "mongoose": "^8.0.3",
